--- a/roguelike/roguelike.cabal
+++ b/roguelike/roguelike.cabal
@@ -8,34 +8,28 @@ license-file:        LICENSE
 author:              Author name here
 maintainer:          example@example.com
 copyright:           2017 Author name here
-category:            Web
+category:            Game
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
+-- Assumes Stackage LTS 8.19 or later.
+-- Might work with earlier versions.
+-- This cabal.config will cover you if you're using cabal-install:
+-- https://www.stackage.org/lts-8.19/cabal.config
 
-executable roguelike-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , roguelike
-  default-language:    Haskell2010
-
-test-suite roguelike-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , roguelike
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
-
-source-repository head
-  type:     git
-  location: https://github.com/githubuser/roguelike
+executable game
+    hs-source-dirs:     app
+    main-is:            Main.hs
+    build-depends:      base,
+                        hexes,
+                        bytestring,
+                        JuicyPixels,
+                        file-embed,
+                        transformers,
+                        vector
+    default-language:   Haskell2010
+    other-extensions:   TemplateHaskell
+    -- ghc-options:        -ddump-splices  -ddump-to-file
+    -- ghc-options:        -O2
+    -- ghc-options:        -optl-mwindows
